<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvtop"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1top"
        android:layout_width="358dp"
        android:layout_height="191dp"
        android:background="@drawable/bottons_rectangles"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn1top"
        android:textColor="#FFFFFF"
        app:backgroundTint="#cf1e1e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2top"
        android:layout_width="358dp"
        android:layout_height="191dp"
        android:background="@drawable/bottons_rectangles"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn2top"
        android:textColor="#FFFFFF"
        app:backgroundTint="#2784e0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3top"
        android:layout_width="358dp"
        android:layout_height="191dp"
        android:background="@drawable/bottons_rectangles"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn3top"
        android:textColor="#FFFFFF"
        app:backgroundTint="#2a4a0b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />
</androidx.constraintlayout.widget.ConstraintLayout>